--- a/indexxphoenix_prod.html
+++ b/indexxphoenix_prod.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Indexx Exchange</title>
+    <title>Indexx Phoenix</title>
     <!-- Latest compiled and minified CSS -->
     <link
       rel="stylesheet"
@@ -120,7 +120,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-md-3 logo-div">
-          <a href="/"><img style="width: 65%" src="indexx-exchange.png" /></a>
+          <a href="/"><img style="width: 65%" src="INXP.png" /></a>
         </div>
         <div class="col-12 col-md-6 nav-main">
           <ul>
@@ -140,18 +140,16 @@
             <li>
               <a href="indexxexchange_test.html">Indexx Exchange Test</a>
               <br />
-              <a href="indexxexchange_prod.html" class="active-link"
-                >Indexx Exchange Production(iNEX)</a
+              <a href="indexxexchange_prod.html">Indexx Exchange Production(iNEX)</a
               >
             </li>
             <li>
-              <a href="indexxphoenix_test.html" >Indexx Phoenix Test</a
-              >
+              <a href="indexxphoenix_test.html">Indexx Phoenix Test</a>
               <br />
-              <a href="indexxphoenix_prod.html"
+              <a href="indexxphoenix_prod.html" class="active-link"
                 >Indexx Phoenix Production(INXP)</a
               >
-              </li>
+            </li>
           </ul>
         </div>
       </div>
@@ -160,7 +158,7 @@
 
   <body>
     <div class="nine">
-      <h1>Indexx Exchange Production<span>Admin Dashboard</span></h1>
+      <h1>Indexx Phoenix Production<span>Admin Dashboard</span></h1>
       <button style="margin-left: 40%" onclick="load()">Connect Wallet</button
       ><br />
     </div>
@@ -398,13 +396,7 @@
   <script>
     const tokenABI = [
       {
-        inputs: [
-          {
-            internalType: "uint256",
-            name: "_stakepercentage",
-            type: "uint256",
-          },
-        ],
+        inputs: [],
         stateMutability: "nonpayable",
         type: "constructor",
       },
@@ -431,25 +423,6 @@
           },
         ],
         name: "Approval",
-        type: "event",
-      },
-      {
-        anonymous: false,
-        inputs: [
-          {
-            indexed: true,
-            internalType: "address",
-            name: "previousOwner",
-            type: "address",
-          },
-          {
-            indexed: true,
-            internalType: "address",
-            name: "newOwner",
-            type: "address",
-          },
-        ],
-        name: "OwnershipTransferred",
         type: "event",
       },
       {
@@ -621,19 +594,6 @@
         inputs: [
           {
             internalType: "address",
-            name: "_stakeholder",
-            type: "address",
-          },
-        ],
-        name: "addStakeholder",
-        outputs: [],
-        stateMutability: "nonpayable",
-        type: "function",
-      },
-      {
-        inputs: [
-          {
-            internalType: "address",
             name: "owner",
             type: "address",
           },
@@ -732,25 +692,6 @@
         inputs: [
           {
             internalType: "address",
-            name: "_stakeholder",
-            type: "address",
-          },
-        ],
-        name: "calculateReward",
-        outputs: [
-          {
-            internalType: "uint256",
-            name: "",
-            type: "uint256",
-          },
-        ],
-        stateMutability: "view",
-        type: "function",
-      },
-      {
-        inputs: [
-          {
-            internalType: "address",
             name: "_newFeeAdmin",
             type: "address",
           },
@@ -769,19 +710,6 @@
           },
         ],
         name: "changeFeeStatus",
-        outputs: [],
-        stateMutability: "nonpayable",
-        type: "function",
-      },
-      {
-        inputs: [
-          {
-            internalType: "uint256",
-            name: "_stake",
-            type: "uint256",
-          },
-        ],
-        name: "createStake",
         outputs: [],
         stateMutability: "nonpayable",
         type: "function",
@@ -820,13 +748,6 @@
             type: "bool",
           },
         ],
-        stateMutability: "nonpayable",
-        type: "function",
-      },
-      {
-        inputs: [],
-        name: "distributeRewards",
-        outputs: [],
         stateMutability: "nonpayable",
         type: "function",
       },
@@ -945,30 +866,6 @@
         inputs: [
           {
             internalType: "address",
-            name: "_address",
-            type: "address",
-          },
-        ],
-        name: "isStakeholder",
-        outputs: [
-          {
-            internalType: "bool",
-            name: "",
-            type: "bool",
-          },
-          {
-            internalType: "uint256",
-            name: "",
-            type: "uint256",
-          },
-        ],
-        stateMutability: "view",
-        type: "function",
-      },
-      {
-        inputs: [
-          {
-            internalType: "address",
             name: "to",
             type: "address",
           },
@@ -998,19 +895,6 @@
       },
       {
         inputs: [],
-        name: "owner",
-        outputs: [
-          {
-            internalType: "address",
-            name: "",
-            type: "address",
-          },
-        ],
-        stateMutability: "view",
-        type: "function",
-      },
-      {
-        inputs: [],
         name: "pause",
         outputs: [],
         stateMutability: "nonpayable",
@@ -1027,39 +911,6 @@
           },
         ],
         stateMutability: "view",
-        type: "function",
-      },
-      {
-        inputs: [
-          {
-            internalType: "uint256",
-            name: "_stake",
-            type: "uint256",
-          },
-        ],
-        name: "removeStake",
-        outputs: [],
-        stateMutability: "nonpayable",
-        type: "function",
-      },
-      {
-        inputs: [
-          {
-            internalType: "address",
-            name: "_stakeholder",
-            type: "address",
-          },
-        ],
-        name: "removeStakeholder",
-        outputs: [],
-        stateMutability: "nonpayable",
-        type: "function",
-      },
-      {
-        inputs: [],
-        name: "renounceOwnership",
-        outputs: [],
-        stateMutability: "nonpayable",
         type: "function",
       },
       {
@@ -1101,57 +952,6 @@
       {
         inputs: [
           {
-            internalType: "address",
-            name: "_stakeholder",
-            type: "address",
-          },
-        ],
-        name: "rewardOf",
-        outputs: [
-          {
-            internalType: "uint256",
-            name: "",
-            type: "uint256",
-          },
-        ],
-        stateMutability: "view",
-        type: "function",
-      },
-      {
-        inputs: [
-          {
-            internalType: "address",
-            name: "_stakeholder",
-            type: "address",
-          },
-        ],
-        name: "stakeOf",
-        outputs: [
-          {
-            internalType: "uint256",
-            name: "",
-            type: "uint256",
-          },
-        ],
-        stateMutability: "view",
-        type: "function",
-      },
-      {
-        inputs: [],
-        name: "stakePercentage",
-        outputs: [
-          {
-            internalType: "uint256",
-            name: "",
-            type: "uint256",
-          },
-        ],
-        stateMutability: "view",
-        type: "function",
-      },
-      {
-        inputs: [
-          {
             internalType: "bytes4",
             name: "interfaceId",
             type: "bytes4",
@@ -1176,32 +976,6 @@
             internalType: "string",
             name: "",
             type: "string",
-          },
-        ],
-        stateMutability: "view",
-        type: "function",
-      },
-      {
-        inputs: [],
-        name: "totalRewards",
-        outputs: [
-          {
-            internalType: "uint256",
-            name: "",
-            type: "uint256",
-          },
-        ],
-        stateMutability: "view",
-        type: "function",
-      },
-      {
-        inputs: [],
-        name: "totalStakes",
-        outputs: [
-          {
-            internalType: "uint256",
-            name: "",
-            type: "uint256",
           },
         ],
         stateMutability: "view",
@@ -1274,35 +1048,15 @@
         type: "function",
       },
       {
-        inputs: [
-          {
-            internalType: "address",
-            name: "newOwner",
-            type: "address",
-          },
-        ],
-        name: "transferOwnership",
-        outputs: [],
-        stateMutability: "nonpayable",
-        type: "function",
-      },
-      {
         inputs: [],
         name: "unpause",
         outputs: [],
         stateMutability: "nonpayable",
         type: "function",
       },
-      {
-        inputs: [],
-        name: "withdrawReward",
-        outputs: [],
-        stateMutability: "nonpayable",
-        type: "function",
-      },
     ];
 
-    const tokenAddress = "0xD0D8c92c577E58AA2d77481F51557fd10AC76232";
+    const tokenAddress = "0xd2BE78E43aeB9135259D9A5362ff13B8557E172c";
     // const icoAddress = "0x07725EfbC87E293EEeD1c2438c4b7f7A007fF850";
     // const lockAddress = "0x82245b856CDE4Bed488D5B0227d27beCDcd81393";
 
