--- a/indexxusd+_test.html
+++ b/indexxusd+_test.html
@@ -148,6 +148,14 @@
                 >Indexx Exchange Production(iNEX)</a
               >
             </li>
+            <li>
+              <a href="indexxphoenix_test.html" >Indexx Phoenix Test</a
+              >
+              <br />
+              <a href="indexxphoenix_prod.html"
+                >Indexx Phoenix Production(INXP)</a
+              >
+              </li>
           </ul>
         </div>
       </div>
