updated ethereum tokens

--- a/indexxexchange_prod.html
+++ b/indexxexchange_prod.html
@@ -126,22 +126,32 @@
           <ul>
             <li>
               <a href="index.html">Indexx 500 Test</a> <br />
-              <a href="indexx500_prod.html">Indexx 500 Production(IN500)</a>
+              <a href="indexx500_prod.html">Indexx 500 Production(IN500)-BSC</a>
+              <hr />
+              <a href="indexx500_prod_eth.html">Indexx 500 Production(IN500)-ETH</a>
             </li>
             <li>
               <a href="crypto_test.html">Indexx Crypto Test</a> <br />
-              <a href="crypto_prod.html">Indexx Crypto Production(INXC)</a>
+              <a href="crypto_prod.html">Indexx Crypto Production(INXC)-BSC</a>
+              <hr />
+              <a href="crypto_prod_eth.html">Indexx Crypto Production(INXC)-ETH</a>
             </li>
             <li>
               <a href="indexxusd+_test.html">Indexx USD+ Test</a>
               <br />
-              <a href="indexxusd+_prod.html">Indexx USD+ Production(iUSD+)</a>
+              <a href="indexxusd+_prod.html">Indexx USD+ Production(iUSD+)-BSC</a>
+              <hr />
+              <a href="indexxusd+_prod_eth.html">Indexx USD+ Production(iUSD+)-ETH</a>
             </li>
             <li>
               <a href="indexxexchange_test.html">Indexx Exchange Test</a>
               <br />
               <a href="indexxexchange_prod.html" class="active-link"
-                >Indexx Exchange Production(iNEX)</a
+                >Indexx Exchange Production(iNEX)-BSC</a
+              >
+              <hr />
+              <a href="indexxexchange_prod_eth.html"
+                >Indexx Exchange Production(iNEX)-ETH</a
               >
             </li>
             <li>
@@ -149,8 +159,12 @@
               >
               <br />
               <a href="indexxphoenix_prod.html"
-                >Indexx Phoenix Production(INXP)</a
+                >Indexx Phoenix Production(INXP)-BSC</a
               >
+              <hr />
+              <a href="indexxphoenix_prod_eth.html"
+              >Indexx Phoenix Production(INXP)-ETH</a
+            >
               </li>
           </ul>
         </div>
