--- a/indexxusd+_test.html
+++ b/indexxusd+_test.html
@@ -125,50 +125,60 @@
         <div class="col-12 col-md-6 nav-main">
           <ul>
             <li>
+              <p>BSC</p>
               <a href="index.html">Indexx 500 Test</a> <br />
-              <a href="indexx500_prod.html">Indexx 500 Production(IN500)-BSC</a>
+              <a href="indexx500_prod.html">Indexx 500 Production(IN500)</a>
               <hr />
-              <a href="indexx500_prod_eth.html">Indexx 500 Production(IN500)-ETH</a>
+              <p>ETH</p>
+              <a href="indexx500_prod_eth.html">Indexx 500 Production(IN500)</a>
             </li>
             <li>
+              <p>BSC</p>
               <a href="crypto_test.html">Indexx Crypto Test</a> <br />
-              <a href="crypto_prod.html">Indexx Crypto Production(INXC)-BSC</a>
+              <a href="crypto_prod.html">Indexx Crypto Production(INXC)</a>
               <hr />
-              <a href="crypto_prod_eth.html">Indexx Crypto Production(INXC)-ETH</a>
+              <p>ETH</p>
+              <a href="crypto_prod_eth.html">Indexx Crypto Production(INXC)</a>
             </li>
             <li>
+              <p>BSC</p>
               <a href="indexxusd+_test.html" class="active-link"
                 >Indexx USD+ Test</a
               >
               <br />
-              <a href="indexxusd+_prod.html">Indexx USD+ Production(iUSD+)-BSC</a>
+              <a href="indexxusd+_prod.html">Indexx USD+ Production(iUSD+)</a>
               <hr />
-              <a href="indexxusd+_prod_eth.html">Indexx USD+ Production(iUSD+)-ETH</a>
+              <p>ETH</p>
+              <a href="indexxusd+_prod_eth.html">Indexx USD+ Production(iUSD+)</a>
             </li>
             <li>
+              <p>BSC</p>
               <a href="indexxexchange_test.html" 
                 >Indexx Exchange Test</a
               >
               <br />
               <a href="indexxexchange_prod.html"
-                >Indexx Exchange Production(iNEX)-BSC</a
+                >Indexx Exchange Production(iNEX)</a
               >
               <hr />
+              <p>ETH</p>
               <a href="indexxexchange_prod_eth.html"
-                >Indexx Exchange Production(iNEX)-ETH</a
+                >Indexx Exchange Production(iNEX)</a
               >
 
             </li>
             <li>
+              <p>BSC</p>
               <a href="indexxphoenix_test.html" >Indexx Phoenix Test</a
               >
               <br />
               <a href="indexxphoenix_prod.html"
-                >Indexx Phoenix Production(INXP)-BSC</a
+                >Indexx Phoenix Production(INXP)</a
               >
               <hr />
+              <p>ETH</p>
               <a href="indexxphoenix_prod_eth.html"
-              >Indexx Phoenix Production(INXP)-ETH</a
+              >Indexx Phoenix Production(INXP)</a
             >
               </li>
           </ul>
