--- a/crypto_prod.html
+++ b/crypto_prod.html
@@ -120,35 +120,44 @@
 			<div class="col-12 col-md-6 nav-main">
 				<ul>
 					<li>
+						<p>BSC</p>
 					  <a href="index.html">Indexx 500 Test</a> <br>
 					  <a href="indexx500_prod.html">Indexx 500 Production(IN500)-BSC</a>
 					  <hr />
+					  <p>ETH</p>
 					  <a href="indexx500_prod_eth.html">Indexx 500 Production(IN500)-ETH</a>
 					</li>
 					<li>
+						<p>BSC</p>
 					  <a href="crypto_test.html">Indexx Crypto Test</a> <br>
 					  <a href="crypto_prod.html" class="active-link">Indexx Crypto Production(INXC)-BSC</a>
 					  <hr />
+					  <p>ETH</p>
 					  <a href="crypto_prod_eth.html">Indexx Crypto Production(INXC)-ETH</a>
 					</li>
 					<li>
+						<p>BSC</p>
 					  <a href="indexxusd+_test.html">Indexx USD+ Test</a> <br>
 					  <a href="indexxusd+_prod.html">Indexx USD+ Production(iUSD+)-BSC</a>
 					  <hr />
+					  <p>ETH</p>
 					  <a href="indexxusd+_prod_eth.html">Indexx USD+ Production(iUSD+)-ETH</a>
 					</li>
 					<li>
+						<p>BSC</p>
 						<a href="indexxexchange_test.html">Indexx Exchange Test</a>
 						<br />
 						<a href="indexxexchange_prod.html"
 						  >Indexx Exchange Production(iNEX)-BSC</a
 						>
 						<hr />
+						<p>ETH</p>
 						<a href="indexxexchange_prod_eth.html"
 						  >Indexx Exchange Production(iNEX)-ETH</a
 						>
 					  </li>
 					  <li>
+						<p>BSC</p>
 						<a href="indexxphoenix_test.html" >Indexx Phoenix Test</a
 						>
 						<br />
@@ -156,6 +165,7 @@
 						  >Indexx Phoenix Production(INXP)-BSC</a
 						>
 						<hr />
+						<p>ETH</p>
 						<a href="indexxphoenix_prod_eth.html"
 						  >Indexx Phoenix Production(INXP)-ETH</a
 						>
